[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fish-touching"
version = "0.1.0"
description = "伪装成日志监控的终端摸鱼框架（可插拔聊天后端，内置微博私信）"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [{ name = "Lutien" }]
keywords = ["terminal", "tui", "chat", "moonlighting", "weibo"]

# 运行核心无需第三方依赖；qrcode 为可选（终端显示二维码）
dependencies = []

[project.optional-dependencies]
qr = ["qrcode"]

[project.scripts]
fish-touching = "fishtouching.app:main"

[tool.setuptools.packages.find]
include = ["fishtouching*"]
